dead code removed